--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<meta name="og:title" content="Hector's portfolio 🎉🤞">
 	<meta name="og:image" content="%PUBLIC_URL%/logo512.png">
 	<meta name="og:type" content="website">
-	<meta name="author" content="Hector Saldaña Espinoza">
+	<meta name="author" content="Héctor Saldaña Espinoza">
 	<meta name="description" content="Web site created for you meet me" />
 	<meta name="apple-mobile-web-capable" content="yes">
 	<meta name="apple-mobile-web-status-bar-style" content="black-translucent">
