--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#111827" />
-	<meta name="og:title" content="Hector's portfolio 🎉🤞">
+	<meta name="og:title" content="Hector Saldes's portfolio 🎉🤞">
 	<meta name="og:image" content="%PUBLIC_URL%/logo512.png">
 	<meta name="og:type" content="website">
 	<meta name="author" content="Héctor Saldaña Espinoza">
-	<meta name="description" content="Web site created for you meet me" />
+	<meta name="description" content="Web site created for you meet Hector Saldes" />
 	<meta name="apple-mobile-web-capable" content="yes">
 	<meta name="apple-mobile-web-status-bar-style" content="black-translucent">
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
